[package]
name = "rdp-rs"
version = "0.1.0"
authors = ["Sylvain Peyrefitte <citronneur@gmail.com>"]
description = "A Pure RUST imlementation of Remote Desktop Protocol"
repository = "https://github.com/citronneur/rdp-rs"
readme = "README.md"
keywords = ["rdp", "security", "network", "windows"]
categories = ["network"]
license = "MIT"
documentation = "https://docs.rs/rdp-rs"

[lib]
name = "rdp"
path = "src/lib.rs"

[[bin]]
name = "mstsc-rs"
path = "src/bin/mstsc-rs.rs"
required-features = ["mstsc-rs"]

[features]
# The reason we do this is because doctests don't get cfg(test)
# See: https://github.com/rust-lang/cargo/issues/4669
integration = []
mstsc-rs = ["hex", "winapi", "minifb", "clap", "libc"]


[dependencies]
byteorder = "^1.3"
bufstream = "0.1"
gethostname = "0.2.3"
indexmap = "^1.3"
yasna = { version = "^0.3" }
md4 = "^0.8"
hmac = "^0.7"
md-5 = "^0.8"
num-bigint = "^0.2"
num_enum = "0.4.3"
oid-registry = "0.6.0"
rand = "^0.7"
rc4 = "0.1.0"
ring = "0.16.20"
rsa = "0.6.1"
rustls = { version = "0.20.4", features = ["dangerous_configuration"]}
x509-parser = "0.14.0"

# for mtsc-rs
hex = { version = "^0.4", optional = true }
winapi = { version = "^0.3", features = ["winsock2"], optional = true }
minifb = { version = "^0.15", optional = true }
clap = { version = "^2.33", optional = true}
libc = { version = "^0.2", optional = true}